fix issue with widgets being cut off on mobile

--- a/kinode/packages/homepage/ui/src/index.css
+++ b/kinode/packages/homepage/ui/src/index.css
@@ -33,7 +33,6 @@ span {
   background-color: var(--white);
   border: 1px solid var(--off-black);
   border-radius: 20px;
-  /* box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.1); */
 }
 
 header,
@@ -106,7 +105,6 @@ header button {
   /* border-radius: 20px; */
   overflow: hidden;
   border: 1px solid black;
-  margin-top: auto;
   max-height: 540px;
   overflow-y: auto;
   padding: 1em;
@@ -239,6 +237,7 @@ footer {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    max-height: none; 
   }
 
   #widgets {
